--- a/examples/batching_example.ipynb
+++ b/examples/batching_example.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -23,16 +23,20 @@
       },
       "outputs": [],
       "source": [
+        "import os\n",
+        "os.chdir(\"/home/evelyn/projects_shared/jaxlogit\")\n",
+        "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import jax\n",
         "\n",
-        "from jaxlogit.mixed_logit import MixedLogit, ConfigData"
+        "from jaxlogit.mixed_logit import MixedLogit, ConfigData\n",
+        "os.chdir(\"/home/evelyn/projects_shared/jaxlogit/examples\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -51,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -60,9 +64,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Data has 4308 observations, we use 6 random variables in the model. We work in 64 bit precision, so each element is 8 bytes. For 5000 draws, the array of draws is about 0.96 GB.\n"
+          ]
+        }
+      ],
       "source": [
         "n_obs = df['chid'].unique().shape[0]\n",
         "n_vars = 6\n",
@@ -82,16 +94,66 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "**** The optimization did not converge after 44 iterations. ****\n",
+            "Convergence not reached. The estimates may not be reliable.\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "    Message: max line search iters reached\n",
+            "    Iterations: 44\n",
+            "    Function evaluations: 58\n",
+            "Estimation time= 13.9 seconds\n",
+            "---------------------------------------------------------------------------\n",
+            "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
+            "---------------------------------------------------------------------------\n",
+            "pf                     -0.9150173     1.0000000    -0.9150173          0.36    \n",
+            "cl                     -0.2352363     1.0000000    -0.2352363         0.814    \n",
+            "loc                     2.2576092     1.0000000     2.2576092         0.024 *  \n",
+            "wk                      1.6694212     1.0000000     1.6694212        0.0951 .  \n",
+            "tod                    -8.7990986     1.0000000    -8.7990986      1.96e-18 ***\n",
+            "seas                   -9.2165341     1.0000000    -9.2165341      4.68e-20 ***\n",
+            "sd.pf                  -3.2531691     1.0000000    -3.2531691       0.00115 ** \n",
+            "sd.cl                  -0.6681733     1.0000000    -0.6681733         0.504    \n",
+            "sd.loc                  1.6725345     1.0000000     1.6725345        0.0945 .  \n",
+            "sd.wk                   0.8063075     1.0000000     0.8063075          0.42    \n",
+            "sd.tod                  2.7147022     1.0000000     2.7147022       0.00666 ** \n",
+            "sd.seas                 2.3838406     1.0000000     2.3838406        0.0172 *  \n",
+            "---------------------------------------------------------------------------\n",
+            "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+            "\n",
+            "Log-Likelihood= -3909.383\n",
+            "AIC= 7842.766\n",
+            "BIC= 7919.185\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "None"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "model = MixedLogit()\n",
         "\n",
         "config = ConfigData(\n",
         "    panels=df['id'],\n",
-        "    n_draws=n_draws,\n",
+        "    n_draws=1000,\n",
         "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
         "    batch_size=None,\n",
-        "    optim_method=\"L-BFGS-B\",\n",
+        "    optim_method=\"L-BFGS\",\n",
+        "    maxiter=100,\n",
         ")\n",
         "\n",
         "res = model.fit(\n",
@@ -178,7 +240,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "venv (3.10.12)",
+      "display_name": "venv",
       "language": "python",
       "name": "python3"
     },
@@ -192,7 +254,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
