--- a/examples/mixed_logit_comparison_example.ipynb
+++ b/examples/mixed_logit_comparison_example.ipynb
@@ -25,11 +25,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "39a05d62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:2026-01-16 13:18:02,396:jax._src.xla_bridge:854: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n",
+      "/home/evelyn/projects_shared/jaxlogit/venv/lib/python3.12/site-packages/tqdm_joblib/__init__.py:4: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import tqdm\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
+    "os.chdir(\"/home/evelyn/projects_shared/jaxlogit\")\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import jax\n",
@@ -51,7 +64,9 @@
     "logger.setLevel(blog.INFO)\n",
     "\n",
     "#  64bit precision\n",
-    "jax.config.update(\"jax_enable_x64\", True)"
+    "jax.config.update(\"jax_enable_x64\", True)\n",
+    "\n",
+    "os.chdir(\"/home/evelyn/projects_shared/jaxlogit/examples\")"
    ]
   },
   {
@@ -66,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "47fa6cc1",
    "metadata": {},
    "outputs": [],
@@ -86,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f6b4f249",
    "metadata": {},
    "outputs": [],
@@ -104,7 +119,7 @@
     "    validate='one_to_one'\n",
     ")\n",
     "\n",
-    "df_wide_train, df_wide_test = sklearn.model_selection.train_test_split(df, train_size=0.8)\n",
+    "df_wide_train, df_wide_test = sklearn.model_selection.train_test_split(df, train_size=0.2)\n",
     "df_train = wide_to_long(df_wide_train, \"chid\", [1,2,3,4], \"alt\", varying=varnames, panels=True)\n",
     "df_train = df_train.sort_values(['chid', 'alt'])\n",
     "df_test = wide_to_long(df_wide_test, \"chid\", [1,2,3,4], \"alt\", varying=varnames, panels=True)\n",
@@ -125,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "46257705",
    "metadata": {},
    "outputs": [],
@@ -147,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "535c39c8",
    "metadata": {},
    "outputs": [],
@@ -162,7 +177,7 @@
     "    n_draws=n_draws,\n",
     "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
     "    batch_size=None,\n",
-    "    optim_method=\"L-BFGS-B\",\n",
+    "    optim_method=\"BFGS\",\n",
     ")\n",
     "init_coeff = None"
    ]
@@ -177,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b58c4d3a",
    "metadata": {},
    "outputs": [],
@@ -234,12 +249,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "52742f8e",
+   "execution_count": 18,
+   "id": "22c1ceff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "**** The optimization did not converge after 165 iterations. ****\n",
+      "Convergence not reached. The estimates may not be reliable.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Message: max line search iters reached\n",
+      "    Iterations: 165\n",
+      "    Function evaluations: 204\n",
+      "Estimation time= 6.8 seconds\n",
+      "---------------------------------------------------------------------------\n",
+      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
+      "---------------------------------------------------------------------------\n",
+      "pf                     -0.8516478     1.0000000    -0.8516478         0.395    \n",
+      "cl                     -0.2126368     1.0000000    -0.2126368         0.832    \n",
+      "loc                     2.1321924     1.0000000     2.1321924        0.0333 *  \n",
+      "wk                      1.5323814     1.0000000     1.5323814         0.126    \n",
+      "tod                    -8.3066886     1.0000000    -8.3066886       3.8e-16 ***\n",
+      "seas                   -8.3900352     1.0000000    -8.3900352      1.98e-16 ***\n",
+      "sd.pf                  -7.9657740     1.0000000    -7.9657740      5.19e-15 ***\n",
+      "sd.cl                  -1.0045696     1.0000000    -1.0045696         0.315    \n",
+      "sd.loc                  1.3262669     1.0000000     1.3262669         0.185    \n",
+      "sd.wk                  -0.1032620     1.0000000    -0.1032620         0.918    \n",
+      "sd.tod                  2.4179288     1.0000000     2.4179288        0.0158 *  \n",
+      "sd.seas                 1.4727058     1.0000000     1.4727058         0.141    \n",
+      "---------------------------------------------------------------------------\n",
+      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+      "\n",
+      "Log-Likelihood= -927.863\n",
+      "AIC= 1879.726\n",
+      "BIC= 1936.823\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "model_jax.fit(\n",
+    "model_jax_lbfgs = MixedLogit()\n",
+    "config = ConfigData(\n",
+    "    panels=panels_train,\n",
+    "    n_draws=n_draws,\n",
+    "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
+    "    batch_size=None,\n",
+    "    optim_method=\"L-BFGS\",\n",
+    "    maxiter=200,\n",
+    ")\n",
+    "model_jax_lbfgs.fit(\n",
     "    X=X_train,\n",
     "    y=y_train,\n",
     "    varnames=varnames,\n",
@@ -248,7 +321,85 @@
     "    randvars=randvars,\n",
     "    config=config\n",
     ")\n",
-    "display(model_jax.summary())\n",
+    "display(model_jax_lbfgs.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "52742f8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "**** The optimization did not converge after 12 iterations. ****\n",
+      "Convergence not reached. The estimates may not be reliable.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Message: zoom failed\n",
+      "    Iterations: 12\n",
+      "    Function evaluations: 17\n",
+      "Estimation time= 1.4 seconds\n",
+      "---------------------------------------------------------------------------\n",
+      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
+      "---------------------------------------------------------------------------\n",
+      "pf                     -0.8280344     1.0000000    -0.8280344         0.408    \n",
+      "cl                     -0.2006538     1.0000000    -0.2006538         0.841    \n",
+      "loc                     1.9684474     1.0000000     1.9684474        0.0493 *  \n",
+      "wk                      1.4464420     1.0000000     1.4464420         0.148    \n",
+      "tod                    -7.7990253     1.0000000    -7.7990253       1.8e-14 ***\n",
+      "seas                   -7.8227250     1.0000000    -7.8227250      1.51e-14 ***\n",
+      "sd.pf                  -2.0991257     1.0000000    -2.0991257        0.0361 *  \n",
+      "sd.cl                  -1.1478698     1.0000000    -1.1478698         0.251    \n",
+      "sd.loc                  1.2962917     1.0000000     1.2962917         0.195    \n",
+      "sd.wk                  -0.4159205     1.0000000    -0.4159205         0.678    \n",
+      "sd.tod                  2.1182914     1.0000000     2.1182914        0.0344 *  \n",
+      "sd.seas                 0.5086868     1.0000000     0.5086868         0.611    \n",
+      "---------------------------------------------------------------------------\n",
+      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+      "\n",
+      "Log-Likelihood= -927.991\n",
+      "AIC= 1879.982\n",
+      "BIC= 1937.079\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model_jax_bfgs = MixedLogit()\n",
+    "config = ConfigData(\n",
+    "    panels=panels_train,\n",
+    "    n_draws=n_draws,\n",
+    "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
+    "    batch_size=None,\n",
+    "    optim_method=\"BFGS\",\n",
+    "    maxiter=100,\n",
+    ")\n",
+    "\n",
+    "model_jax_bfgs.fit(\n",
+    "    X=X_train,\n",
+    "    y=y_train,\n",
+    "    varnames=varnames,\n",
+    "    ids=ids_train,\n",
+    "    alts=alts_train,\n",
+    "    randvars=randvars,\n",
+    "    config=config\n",
+    ")\n",
+    "display(model_jax_bfgs.summary())\n",
     "init_coeff_j = model_jax.coeff_"
    ]
   },
@@ -262,10 +413,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e89a636c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
+      "    Iterations: 104\n",
+      "    Function evaluations: 112\n",
+      "Estimation time= 7.3 seconds\n",
+      "---------------------------------------------------------------------------\n",
+      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
+      "---------------------------------------------------------------------------\n",
+      "pf                     -0.9120333     1.0000000    -0.9120333         0.362    \n",
+      "cl                     -0.2157173     1.0000000    -0.2157173         0.829    \n",
+      "loc                     2.1488672     1.0000000     2.1488672        0.0319 *  \n",
+      "wk                      1.5293714     1.0000000     1.5293714         0.127    \n",
+      "tod                    -8.7415043     1.0000000    -8.7415043      1.19e-17 ***\n",
+      "seas                   -8.7368893     1.0000000    -8.7368893      1.24e-17 ***\n",
+      "sd.pf                   0.1737137     1.0000000     0.1737137         0.862    \n",
+      "sd.cl                   0.3192557     1.0000000     0.3192557          0.75    \n",
+      "sd.loc                  1.5946384     1.0000000     1.5946384         0.111    \n",
+      "sd.wk                   0.6658857     1.0000000     0.6658857         0.506    \n",
+      "sd.tod                  2.2730584     1.0000000     2.2730584        0.0233 *  \n",
+      "sd.seas                 1.0926699     1.0000000     1.0926699         0.275    \n",
+      "---------------------------------------------------------------------------\n",
+      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+      "\n",
+      "Log-Likelihood= -925.765\n",
+      "AIC= 1875.530\n",
+      "BIC= 1932.627\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "model_x.fit(\n",
     "    X=X_train,\n",
@@ -323,18 +516,30 @@
    "execution_count": null,
    "id": "ca1a3992",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "Replacement index 3 out of range for positional args tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33;43m\"\u001b[39;49m\u001b[38;5;132;43;01m{:>13}\u001b[39;49;00m\u001b[33;43m \u001b[39;49m\u001b[38;5;132;43;01m{:>13}\u001b[39;49;00m\u001b[33;43m \u001b[39;49m\u001b[38;5;132;43;01m{:>13}\u001b[39;49;00m\u001b[33;43m \u001b[39;49m\u001b[38;5;132;43;01m{:>13}\u001b[39;49;00m\u001b[33;43m\"\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mformat\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mEstimate\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mJaxlogit_BFGS\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mJaxlogit_L-BFGS\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mxlogit\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m-\u001b[39m\u001b[33m\"\u001b[39m * \u001b[32m58\u001b[39m)\n\u001b[32m      3\u001b[39m fmt = \u001b[33m\"\u001b[39m\u001b[38;5;132;01m{:13}\u001b[39;00m\u001b[33m \u001b[39m\u001b[38;5;132;01m{:13.7f}\u001b[39;00m\u001b[33m \u001b[39m\u001b[38;5;132;01m{:13.7f}\u001b[39;00m\u001b[33m \u001b[39m\u001b[38;5;132;01m{:13.7f}\u001b[39;00m\u001b[33m\"\u001b[39m\n",
+      "\u001b[31mIndexError\u001b[39m: Replacement index 3 out of range for positional args tuple"
+     ]
+    }
+   ],
    "source": [
-    "print(\"{:>13} {:>13} {:>13} {:>13}\".format(\"Estimate\", \"Jaxlogit\", \"xlogit\", \"Biogeme\"))\n",
+    "# print(\"{:>13} {:>13} {:>13} {:>13}\".format(\"Estimate\", \"Jaxlogit_BFGS\", \"Jaxlogit_L-BFGS\", \"xlogit\"))\n",
     "print(\"-\" * 58)\n",
     "fmt = \"{:13} {:13.7f} {:13.7f} {:13.7f}\"\n",
     "coeff_names = {'pf': 'pf_mean', 'sd.pf': 'pf_sd', 'cl': 'cl_mean', 'sd.cl': 'cl_sd', 'loc': 'loc_mean', 'sd.loc': 'loc_sd', 'wk': 'wk_mean', 'sd.wk': 'wk_sd', 'tod': 'tod_mean', 'sd.tod': 'tod_sd', 'seas': 'seas_mean', 'sd.seas': 'seas_sd'}\n",
-    "for i in range(len(model_jax.coeff_)):\n",
-    "    name = model_jax.coeff_names[i]\n",
+    "for i in range(len(model_jax_bfgs.coeff_)):\n",
+    "    name = model_jax_bfgs.coeff_names[i]\n",
     "    print(fmt.format(name[:13], \n",
-    "                     model_jax.coeff_[i], \n",
-    "                     model_x.coeff_[i], \n",
-    "                     results.get_beta_values()[coeff_names[name]]))\n",
+    "                     model_jax_bfgs.coeff_[i], \n",
+    "                     model_jax_lbfgs.coeff_[i], \n",
+    "                     model_x.coeff_[i]))\n",
     "print(\"-\" * 58)"
    ]
   },
